# DETR-Look

./: .gitignore  1.txt  BUG_FIXES.md  CRITICAL_FIXES.md  DEFORMABLE_COMPATIBILITY_FIXES.md  DEFORMABLE_MIGRATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICKSTART_FIXED.md  REINSTALL_PYTORCH.md  TRAINING_FEATURES.md  main.py  pyproject.toml  readme.md  reinstall_pytorch.bat  requirements.txt  test_both_models.py  test_cuda_extension.py  test_deformable_compatibility.py  test_deformable_import.py  test_interface_fixes.py  test_model_build.py
configs/: classes.yaml  deformable_detr_baseline.yaml  detr_baseline.yaml  detr_smoke.yaml  detr_speedcheck.yaml  detr_torchvision.yaml
dataset/: __init__.py  coco_dataset.py  deformable_dataset.py
docs/: BLACKLIST_GUIDE.md  BUG_FIXES_20260105_CRITICAL.md  CRITICAL_FIXES_20260105.md  DEFORMABLE_DETR_MIGRATION.md  DEFORMABLE_DETR_MIGRATION_COMPLETED.md  DETR_CH4_6.md  DETR_TRAINING_GUIDE_CURRENT.md  DETR_TRAINING_README.md  FIXES_2026_01_06.md  FIXES_2026_01_06_ROUND3.md  FIXES_2026_01_06_ROUND3.md.broken  FIXES_2026_01_07_ROUND4.md  FIXES_2026_01_07_ROUND5.md  FIXES_SUMMARY.md  HF_FORMAT_FIXES.md  STABLE_TRAINING_GUIDE.md  TORCHVISION_DETR_GUIDE.md.OUTDATED  TORCHVISION_DETR_SUMMARY.md.OUTDATED  TRAINING_GUIDE.md  VERIFICATION_REPORT.md  data_augmentation_guide.py  develop.md
experiments/: trials_example.json
models/: __init__.py  deformable_detr_model.py  detr_model.py
tools/: README_TORCHVISION_SCRIPTS.md  benchmark_dataloader.py  convert_to_coco.py  deploy_datasets.py  eval_detr.py  eval_unified.py  (+18 more)
(+6 files in other folders)
